# nook-e-sign

./: .gitignore  README.md
android/: .gitignore  build.gradle  buildWithOldTools  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/github/josephbgerber/nookesign/: MainActivity.java  Status.java  UpdateTask.java
android/app/src/main/res/layout/: activity_image.xml  activity_main.xml
android/app/src/main/res/values/: strings.xml
android/gradle/wrapper/: gradle-wrapper.properties
android/src/main/: AndroidManifest.xml
android/src/main/java/mjson/: Json.java
android/src/main/res/values/: strings.xml
client/: package-lock.json  package.json  snowpack.config.json  tsconfig.json
client/configs/webpack/: common.js  dev.js  prod.js
client/html/: index.html
client/js/: main.tsx
client/src/: index.html.ejs  index.tsx  styles.css
docker/: Dockerfile  run-developer
docker/scripts/: buildApk  buildInstaller
server/: Cargo.toml
server/migrations/: 20210616175326_initialize.sql  20210616184113_password.sql
server/src/: android.rs  client.rs  error.rs  main.rs
