[package]
name = "server"
version = "0.1.0"
authors = ["Joseph Gerber <josephbgerber@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.5.0"
actix-multipart = "0.3.0"
actix-web = "3"
anyhow = "1.0.38"
base64 = "0.13.0"
dotenv = "0.15.0"
futures = "0.3.13"
image = "0.23.12"
lazy_static = "1.4.0"
serde = "1.0.123"
sqlx = { version = "0.5", features = ["runtime-async-std-native-tls", "postgres"] }
thiserror = "1.0.24"